# splyntra

./: .dockerignore  .editorconfig  .env.example  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  AUTHORS  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSING.md  Makefile  NOTICE  README.md  SECURITY.md  Taskfile.yml  docker-compose.yml  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: dashboard.instructions.md  go-collector.instructions.md  sdks.instructions.md
.github/prompts/: new-detector.prompt.md  new-integration.prompt.md  new-migration.prompt.md
.github/workflows/: community-smoke.yml  docker.yml  go.yml  license-check.yml  python.yml  release.yml  web.yml
apps/collector/: Dockerfile  go.mod  go.sum
apps/collector/app/: app.go  (+1 more)
apps/evaluation/: Dockerfile  pyproject.toml
apps/evaluation/api/: __init__.py  auth.py  routes.py  storage.py
apps/evaluation/scorers/: __init__.py  engine.py
apps/evaluation/tests/: test_scoring.py
apps/security/: Dockerfile  pyproject.toml
apps/security/api/: __init__.py  consumer.py  routes.py
apps/security/detectors/: __init__.py  injection.py  models.py  moderation.py  pii.py  secrets.py  tool_guard.py
apps/security/scripts/: bundle_injection_onnx.py
apps/security/tests/: test_detectors.py
apps/web/: .env.local.example  CHANGELOG.md  Dockerfile  README.md  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
docs/: API.md  GETTING_STARTED.md  INTEGRATIONS.md
examples/: crewai_quickstart.py  langgraph_quickstart.py  quickstart.py  quickstart.ts  security_demo.py
examples/production-agent/: .env.example  Dockerfile  README.md  package-lock.json  package.json
integrations/bedrock/: README.md
integrations/dify/: README.md
integrations/flowise/: README.md
integrations/n8n-nodes-splyntra/: README.md  index.js  package.json  tsconfig.json
integrations/openclaw/: README.md
integrations/openclaw-plugin-splyntra/: README.md  index.ts  openclaw.plugin.json  package.json  tsconfig.json
integrations/vertex/: README.md
migrations/clickhouse/: 001_init.sql  002_detections_agent_id.sql  003_detector_enum_expand.sql  004_span_types.sql  005_platform_cols.sql  006_logs.sql
migrations/postgres/: 002_alert_events.sql  003_evaluation.sql  004_team.sql  007_agent_profiles.sql  008_provider_prices.sql  009_eval_leaderboard.sql  010_branding.sql  011_signup_consent.sql
schema/: README.md
scripts/: license_headers.py
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/src/splyntra/: __init__.py  cli.py  client.py  decorators.py  eval.py  governance.py  guard.py  log.py  redaction.py
sdks/python/src/splyntra/exporters/: __init__.py
sdks/python/src/splyntra/instrumentors/: __init__.py  anthropic.py  chroma.py  crewai.py  google_adk.py  langgraph.py  llamaindex.py  mcp.py  ollama.py  openai.py  openai_agents.py  pydantic_ai.py
sdks/python/tests/: test_guard.py  test_mcp_instrumentor.py  test_redaction.py
sdks/typescript/: CHANGELOG.md  README.md  package-lock.json  package.json
tests/: test_e2e.py
(+213 files in other folders)
