[project]
name = "splyntra-detector"
version = "0.1.0"
description = "Splyntra detection service - PII, secrets, and prompt injection"
license = "LicenseRef-FSL-1.1-ALv2"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "pydantic>=2.7.0",
    "nats-py>=2.7.0",
]

[project.optional-dependencies]
injection = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "optimum[onnxruntime]>=1.19.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "detectors"]
